--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <audio src="somefeeling.mp3" id="audio"></audio>
+    <audio src="suicideboys.mp3" id="audio"></audio>
 
     <div id="logo"></div>
 
